--- a/page29.html
+++ b/page29.html
@@ -37,7 +37,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="mbr-section article mbr-section__container" id="content1-as" data-rv-view="37" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/c">site maker</a></section><section class="mbr-section article mbr-section__container" id="content1-as" data-rv-view="37" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-black" href="page32.html">療程效果</a> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">療程Q&amp;A<br></a></div>
+                <div class="text-xs-center"><a class="btn btn-black" href="page32.html">療程效果</a> <a class="btn btn-black btn-black-outline" href="page31.html" target="_blank">療程Q&amp;A<br></a></div>
             </div>
         </div>
     </div>
