--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-a2" data-rv-view="4">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-a2" data-rv-view="4">
     <div class="mbr-figure">
         <div><img src="assets/images/1202-final-2-1400x799.jpg"></div>
         
@@ -230,7 +230,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="0" style="background-color: rgb(184, 106, 123); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="0" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
