--- a/page28.html
+++ b/page28.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-am" data-rv-view="429" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-am" data-rv-view="429" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 0px;">
 
     
     <div class="container">
