--- a/page34.html
+++ b/page34.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web page design software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/i">how to build your own website</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-c7" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -176,7 +176,7 @@
                     <h4 class="card-title">果凍系列面膜</h4>
                     <h5 class="card-subtitle">售價$399元</h5>
                     <p class="card-text">---<br>藍藻補水舒緩軟膜/<br>黃金嫩白軟膜/<br>珍珠玻尿酸保濕軟膜<br>活動買1送1<br></p>
-                    <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                    <div class="card-btn"><a href="page38.html" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
